# MultilinearWaveletModel

./: CMakeLists.txt  ConfigureGLEW.cmake  README.md
Example/: RegisterTestLocalMultilinearWavelet.cmd
LocalMultilinearWavelet/: BSGWFactory.cpp  BSGWFactory.h  BSplineGridWavelet.h  CMTimer.h  CMakeLists.txt  DataContainer.h  FaceData.cpp  FaceData.h  FileLoader.cpp  FileLoader.h  GlobalImageMatch.cpp  GlobalImageMatch.h  LocalMultilinearWavelet.cpp  MMProjectionCostFunction_Local.cpp  MMProjectionCostFunction_Local.h  Matrix.h  MultilinearModel.cpp  MultilinearModel.h  MultilinearModelHandler.cpp  MultilinearModelHandler.h  NearestNeighborAssistant.cpp  NearestNeighborAssistant.h  Profile.cpp  Profile.h  Quaternion.h  Report.h  StereoFace.cpp  StereoFace.h  Vector.h  VectorNX.h  WaveletShapeFitter.h  WaveletShapeMultiLinearOptimizer.cpp  WaveletShapeMultiLinearOptimizer.h  XArray.h  abutil.h
Model/: MeanFace_NE00_Scaled.off  ScaledAlignedLandmarks.txt
